--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -77,5 +77,7 @@
   background-color: #f1f1f1; }
   .footer img {
     margin-top: 4rem; }
+  .footer .columns {
+    padding-left: 0; }
 
 /*# sourceMappingURL=thyroid-class.css.map */
