--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -1,83 +1,64 @@
-.swiper-slide img {
-  width: 100%; }
+/*
+Error: Undefined operation: "width gt 766px".
+        on line 15 of thyroid-class.scss
 
-.media-object img {
-  width: 100%; }
-.media-object > div > p {
-  border-bottom: 1px dashed #000; }
+10:   > div > p {
+11:     border-bottom: 1px dashed #000;
+12:   }
+13: }
+14: 
+15: @media(width>766px) {
+16:   .information {
+17:     .header {
+18:       max-width: 75rem;
+19:       margin-left: auto;
+20:       margin-right: auto;
 
-.information .header {
-  max-width: 75rem;
-  margin-left: auto;
-  margin-right: auto;
-  position: absolute;
-  z-index: 10000;
-  margin-top: -4.5rem;
-  width: 100%;
-  height: 3rem;
-  background-color: #fbfbfb;
-  border-radius: 3rem 3rem 0 0;
-  box-shadow: 0 -.5rem .5rem #eee inset; }
-  .information .header div {
-    height: .5rem; }
-  .information .header span {
-    padding-left: 3rem; }
-    .information .header span:nth-child(2) {
-      font-weight: bold; }
-
-.top-bar {
-  background-color: #fbfbfb; }
-  .top-bar ul {
-    background-color: #fbfbfb; }
-
-.media-object {
-  font-size: 90%; }
-  .media-object .columns {
-    padding-left: 0; }
-    .media-object .columns:last-child {
-      margin-top: .5rem; }
-  .media-object h4 {
-    font-weight: bold; }
-  .media-object i {
-    font-size: 120%;
-    color: #888; }
-
-.button {
-  border-radius: .2rem;
-  background-color: #6a8b66; }
-  .button:hover, .button:focus {
-    background-color: #507a55; }
-
-.collapse .tabs {
-  background-color: #6a8b66;
-  color: #fbfbfb; }
-  .collapse .tabs li {
-    background-color: #6a8b66; }
-  .collapse .tabs .tabs-title > a {
-    padding: .8rem 1.5rem;
-    font-size: 1rem; }
-    .collapse .tabs .tabs-title > a:focus, .collapse .tabs .tabs-title > a:hover, .collapse .tabs .tabs-title > a[aria-selected=true] {
-      background-color: #507a55; }
-.collapse .tabs-content {
-  background-color: inherit;
-  border: none; }
-  .collapse .tabs-content .tabs-panel {
-    padding: 0; }
-    .collapse .tabs-content .tabs-panel .row {
-      padding: 2rem 0 1rem 0;
-      border-bottom: 1px dashed #555; }
-      .collapse .tabs-content .tabs-panel .row:last-child {
-        border: none; }
-  .collapse .tabs-content .span {
-    width: 50%;
-    display: inline-block;
-    font-size: 90%; }
-
-.footer {
-  background-color: #f1f1f1; }
-  .footer img {
-    margin-top: 4rem; }
-  .footer .columns {
-    padding-left: 0; }
-
-/*# sourceMappingURL=thyroid-class.css.map */
+Backtrace:
+thyroid-class.scss:15
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/script/tree/operation.rb:92:in `rescue in _perform'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/script/tree/operation.rb:88:in `_perform'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:542:in `block in run_interp_no_strip'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:540:in `map'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:540:in `run_interp_no_strip'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:547:in `run_interp'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:512:in `visit_media'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:159:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:8:in `visit'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:36:in `css_tree'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin.rb:82:in `update_stylesheets'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:340:in `watch_or_update'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:51:in `process_result'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/exec/base.rb:52:in `parse'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/exec/base.rb:19:in `parse!'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.4.22/bin/scss:13:in `<top (required)>'
+C:/Ruby23-x64/bin/scss:23:in `load'
+C:/Ruby23-x64/bin/scss:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Undefined operation: \"width gt 766px\".\A         on line 15 of thyroid-class.scss\A \A 10:   > div > p {\A 11:     border-bottom: 1px dashed #000;\A 12:   }\A 13: }\A 14: \A 15: @media(width>766px) {\A 16:   .information {\A 17:     .header {\A 18:       max-width: 75rem;\A 19:       margin-left: auto;\A 20:       margin-right: auto;"; }
