--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -78,4 +78,23 @@
   .footer img {
     margin-top: 4rem; }
 
+.video {
+  background-color: #555;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  color: #eee; }
+  .video .video-list {
+    overflow-y: auto; }
+    .video .video-list h5 {
+      padding: .5rem;
+      margin: 0;
+      background-color: #000;
+      border-bottom: 1px solid #555; }
+    .video .video-list li {
+      background-color: #333; }
+    .video .video-list a {
+      border-bottom: 1px solid #000; }
+    .video .video-list .is-accordion-submenu-parent > a:after, .video .video-list .is-accordion-submenu-parent[aria-expanded=true] > a:after {
+      border-color: #eee transparent transparent; }
+
 /*# sourceMappingURL=thyroid-class.css.map */
