--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -119,3 +119,31 @@
     margin-top: 4rem;
   }
 }
+
+.video {
+  background-color: #555;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  color: #eee;
+
+  .video-list{
+    overflow-y: auto;
+    h5 {
+      padding: .5rem;
+      margin: 0;
+      background-color: #000;
+      border-bottom: 1px solid #555;
+    }
+    li {
+      background-color: #333;
+    }
+
+    a {
+      border-bottom: 1px solid #000;
+    }
+
+    .is-accordion-submenu-parent>a:after,.is-accordion-submenu-parent[aria-expanded=true]>a:after {
+      border-color: #eee transparent transparent;
+    }
+  }
+}
