--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -12,13 +12,21 @@
   }
 }
 
+.reveal {
+  background-color: #fbfbfb;
+}
+
+.help-text {
+  color: #ec5840;
+}
+
 .information {
   .header {
     max-width: 75rem;
     margin-left: auto;
     margin-right: auto;
     position: absolute;
-    z-index: 10000;
+    z-index: 2;
     margin-top: -4.5rem;
     width: 100%;
     height: 3rem;
@@ -116,7 +124,7 @@
 .footer {
   background-color: #f1f1f1;
   img {
-    margin-top: 4rem;
+    width: 100%;
   }
 }
 
