--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -1,8 +1,9 @@
+img {
+  width: 100%; }
+
 .swiper-slide img {
   width: 100%; }
 
-.media-object img {
-  width: 100%; }
 .media-object > div > p {
   border-bottom: 1px dashed #000; }
 
