--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -103,7 +103,7 @@ img {
   .tabs-content {
     background-color: inherit;
     border: none;
-    .tabs-panel {
+    #panel0 {
       padding: 0;
 
       > div {
