--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -80,7 +80,10 @@ img {
     display: inline-block;
     font-size: 90%; }
 .collapse #panel1 > div {
+  padding-top: 1rem;
   border-bottom: 1px solid #aaa; }
+  .collapse #panel1 > div .medium-3 {
+    padding: 0 2rem 2rem; }
   .collapse #panel1 > div .gray {
     color: #aaa; }
   .collapse #panel1 > div:last-child {
