--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -83,7 +83,9 @@ img {
   padding-top: 1rem;
   border-bottom: 1px solid #aaa; }
   .collapse #panel1 > div .medium-3 {
-    padding: 0 2rem 2rem; }
+    padding: 0 4rem auto; }
+    .collapse #panel1 > div .medium-3 img {
+      width: 200px; }
   .collapse #panel1 > div .gray {
     color: #aaa; }
   .collapse #panel1 > div:last-child {
