--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -126,9 +126,10 @@ img {
       border-bottom: 1px solid #aaa;
 
       .medium-3 {
-        padding: 0 4rem auto;
+        text-align: center;
+        padding-bottom: 1rem;
         img {
-          width: 200px;
+          width: 250px;
         }
       }
 
