--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -149,7 +149,11 @@ img {
       padding: .5rem;
     }
     p {
-      padding: .5rem;
+      padding: .5rem 0;
+      margin-bottom: 0;
+      &:last-child {
+        margin-bottom: 1rem;
+      }
     }
   }
 
