--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -95,10 +95,12 @@ img {
   background-color: #eee;
   padding: .5rem; }
 .collapse #panel2 p {
-  padding: .5rem 0;
+  padding: 0 .5rem;
   margin-bottom: 0; }
   .collapse #panel2 p:last-child {
     margin-bottom: 1rem; }
+  .collapse #panel2 p:first-child {
+    margin-top: .5rem; }
 
 .footer {
   background-color: #f1f1f1; }
