--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -149,10 +149,13 @@ img {
       padding: .5rem;
     }
     p {
-      padding: .5rem 0;
+      padding: 0 .5rem;
       margin-bottom: 0;
       &:last-child {
         margin-bottom: 1rem;
+      }
+      &:first-child {
+        margin-top: .5rem;
       }
     }
   }
