--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -80,7 +80,7 @@ img {
     display: inline-block;
     font-size: 90%; }
 .collapse #panel1 > div {
-  padding-top: 1rem;
+  padding-top: 2rem;
   border-bottom: 1px solid #aaa; }
   .collapse #panel1 > div .medium-3 {
     text-align: center;
@@ -91,6 +91,8 @@ img {
     color: #aaa; }
   .collapse #panel1 > div:last-child {
     border-bottom: none; }
+  .collapse #panel1 > div:first-child {
+    padding-top: 1rem; }
 .collapse #panel2 .question-title {
   background-color: #eee;
   padding: .5rem; }
