--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -122,7 +122,7 @@ img {
 
   #panel1 {
     > div {
-      padding-top: 1rem;
+      padding-top: 2rem;
       border-bottom: 1px solid #aaa;
 
       .medium-3 {
@@ -139,6 +139,9 @@ img {
 
       &:last-child {
         border-bottom: none;
+      }
+      &:first-child {
+        padding-top: 1rem;
       }
     }
   }
