--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -97,7 +97,7 @@ img {
   background-color: #eee;
   padding: .5rem; }
 .collapse #panel2 p {
-  padding: 0 .5rem;
+  padding: 0 1rem;
   margin-bottom: 0; }
   .collapse #panel2 p:last-child {
     margin-bottom: 1rem; }
