--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -152,7 +152,7 @@ img {
       padding: .5rem;
     }
     p {
-      padding: 0 .5rem;
+      padding: 0 1rem;
       margin-bottom: 0;
       &:last-child {
         margin-bottom: 1rem;
