--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -128,6 +128,8 @@ img {
       border-bottom: 1px solid #000; }
     .video .video-list a:hover {
       background-color: rgba(33, 153, 255, 0.2); }
+    .video .video-list a:focus {
+      outline: 0; }
     .video .video-list .active > a {
       background-color: rgba(33, 153, 255, 0.5); }
     .video .video-list .is-accordion-submenu-parent > a:after, .video .video-list .is-accordion-submenu-parent[aria-expanded=true] > a:after {
