--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -126,6 +126,12 @@ img {
       background-color: #333; }
     .video .video-list a {
       border-bottom: 1px solid #000; }
+      .video .video-list a .over-hide {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        cursor: inherit;
+        border-bottom: none; }
     .video .video-list a:hover {
       background-color: rgba(33, 153, 255, 0.2); }
     .video .video-list a:focus {
