--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -125,11 +125,12 @@ img {
     .video .video-list li {
       background-color: #333; }
     .video .video-list a {
-      border-bottom: 1px solid #000; }
+      border-bottom: 1px solid #000;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap; }
       .video .video-list a .over-hide {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+        color: inherit;
         cursor: inherit;
         border-bottom: none; }
     .video .video-list a:hover {
