--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -175,9 +175,12 @@ img {
 
 .video {
   background-color: #555;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
   color: #eee;
+
+  >div {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 
   .video-list {
     overflow-y: auto;
