--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -176,10 +176,10 @@ img {
 .video {
   background-color: #555;
   color: #eee;
+  padding-bottom: 1rem;
 
   >div {
     margin-top: 1rem;
-    margin-bottom: 1rem;
   }
 
   .video-list {
