--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -112,10 +112,10 @@ img {
 
 .video {
   background-color: #555;
-  color: #eee; }
+  color: #eee;
+  padding-bottom: 1rem; }
   .video > div {
-    margin-top: 1rem;
-    margin-bottom: 1rem; }
+    margin-top: 1rem; }
   .video .video-list {
     overflow-y: auto; }
     @media screen and (min-width: 40em) {
