--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -49,9 +49,16 @@ img {
 
 .top-bar {
   background-color: #fbfbfb;
+  box-shadow: 0 -0.8rem 1rem -0.5rem #ddd inset;
 
   ul {
-    background-color: #fbfbfb;
+    background-color: transparent;
+
+    li {
+      padding: .1rem 1rem;
+      margin: .6rem 0;
+      border-left: 1px solid #ddd;
+    }
   }
 }
 
@@ -178,12 +185,12 @@ img {
   color: #eee;
   padding-bottom: 1rem;
 
-  >div {
+  > div {
     margin-top: 1rem;
   }
 
   .video-list {
-    @media screen and (min-width: 40em){
+    @media screen and (min-width: 40em) {
       min-height: 550px;
     }
 
@@ -211,15 +218,15 @@ img {
     }
 
     a:hover {
-      background-color: rgba(33,153,258,0.2);
+      background-color: rgba(33, 153, 258, 0.2);
     }
 
     a:focus {
       outline: 0;
     }
 
-    .active>a{
-      background-color: rgba(33,153,258,0.5);
+    .active > a {
+      background-color: rgba(33, 153, 258, 0.5);
     }
 
     .is-accordion-submenu-parent > a:after, .is-accordion-submenu-parent[aria-expanded=true] > a:after {
