--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -37,7 +37,7 @@ img {
   box-shadow: 0 -0.8rem 1rem -0.5rem #ddd inset; }
   .top-bar ul {
     background-color: transparent; }
-    .top-bar ul li {
+    .top-bar ul li a {
       padding: .1rem 1rem;
       margin: .6rem 0;
       border-left: 1px solid #ddd; }
