--- a/public/css/thyroid-class.css
+++ b/public/css/thyroid-class.css
@@ -124,6 +124,7 @@ img {
   .video > div {
     margin-top: 1rem; }
   .video .video-list {
+    color: #eee;
     overflow-y: auto; }
     @media screen and (min-width: 40em) {
       .video .video-list {
