--- a/public/css/thyroid-class.scss
+++ b/public/css/thyroid-class.scss
@@ -187,7 +187,7 @@ img {
 
 .video {
   background-color: #555;
-  color: #eee;
+  color: #ddd;
   padding-bottom: 1rem;
 
   > div {
@@ -195,7 +195,6 @@ img {
   }
 
   .video-list {
-    color: #eee;
     @media screen and (min-width: 40em) {
       min-height: 550px;
     }
