--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -42818,4 +42818,7 @@ table.text-center th {
   .skin-purple-light.sidebar-mini.sidebar-collapse .sidebar-menu > li > .treeview-menu {
     border-left: 1px solid #d2d6de; } }
 
+[v-cloak] {
+  display: none; }
+
 /*# sourceMappingURL=backend.css.map */
