--- a/public/airclass/css/play.css
+++ b/public/airclass/css/play.css
@@ -133,6 +133,7 @@ body {
 }
 .chapters {
 	width: 0;
+	background-color: #555555;
 	transition: width .5s ease;
 }
 .video_container.active .video_wrapper {
@@ -336,10 +337,6 @@ body {
 		float: none;
 		width: 100%;
 		height: auto;
-	}
-	.video {
-		width: 100%;
-		height: 300px;
 	}
 	.chapters {
 		width: 100%;
