--- a/public/airclass/css/play.css
+++ b/public/airclass/css/play.css
@@ -111,7 +111,7 @@ body {
 .chapters .chapter.active {
 	background: #333333;
 }
-.chapters .chapter a{
+.chapters .chapter a,.chapters .chapter .a{
 	color: #F9F9F9;
 	width: 240px;
 	display: inline-block;
