--- a/public/airclass/css/index.css
+++ b/public/airclass/css/index.css
@@ -87,9 +87,12 @@ body {
 .lessons .caption {
 	position: absolute;
 	bottom: 0;
-	width: 210px;
+	width: 230px;
 	padding: 5px;
 	background: rgba(255, 255, 255, .9);
+}
+.lessons .caption_w210{
+	width: 210px;
 }
 .lesson .title {
 	margin: 12px 0 !important;
