首页报名用户显示为已报名

--- a/public/airclass/css/common.css
+++ b/public/airclass/css/common.css
@@ -23,6 +23,10 @@ body {
 .btn:hover, .btn:focus {
 	color: #FFFFFF;
 }
+.btn[disabled]{
+	background-color: #428bca;
+	border-color: #357ebd;
+}
 
 
 a {
