--- a/public/airclass/css/help.css
+++ b/public/airclass/css/help.css
@@ -23,8 +23,12 @@ body {
 	}
 	
 	/* help nav */
-	#helpNav {
+	.helpNav {
 		position: absolute;
+	}
+	.helpNav_scroll{
+		position: fixed;
+		top: 10px;
 	}
 	.main_body .navbar-brand {
 		display: none;
@@ -40,8 +44,7 @@ body {
 		width: 130px;
 	}
 	.help_nav>li>a:hover,
-	.help_nav>li>a:focus,
-	.help_nav .active a {
+	.help_nav>li>a:focus{
 		padding-left: 11px;
 		border-left: 4px solid #00A0E9;
 		color: #00A0E9;
@@ -52,9 +55,9 @@ body {
 		position: relative;
 		margin-left: 230px;
 		margin-top: 15px;
-		height: 400px;
-		overflow-x: hidden;
-		overflow-y: scroll;
+		/*height: 400px;*/
+		/*overflow-x: hidden;*/
+		/*overflow-y: scroll;*/
 	}
 	.help_content .isolate_module {
 		margin-bottom: 80px;
@@ -118,4 +121,37 @@ body {
 		width: 40%;
 		margin: 10px auto;
 	}
+}
+
+.lesson_content{
+	width: 95%;
+}
+.lesson_content table{
+	width: 100%;
+	
+}
+.lesson_content table th,.lesson_content table td{
+	height: 34px;
+	line-height: 34px;
+	border: solid 1px #f9f9f9;
+}
+.lesson_content table th{
+	background-color: #2e486d;
+	color: #ffffff;
+	text-align: center;
+	padding: 0 6px;
+	
+}
+.lesson_content table td{
+	padding: 0 1.2%;
+	
+}
+.lesson_content table .color1 td{
+	background-color: #DDDDDD;
+}
+
+.lesson_content .table_title{
+	text-align: center;
+	background-color: #4caeeb;
+	color: #ffffff;
 }
