--- a/public/airclass/css/lessons_private.css
+++ b/public/airclass/css/lessons_private.css
@@ -18,7 +18,6 @@ body {
 	margin-top: 40px;
 }
 .apply {
-	width: 300px;
 	margin: 60px auto 0;
 }
 .apply .btn_apply {
@@ -28,6 +27,7 @@ body {
 	margin-top: 10px;
 	font-size: 12px;
 	color: #999999;
+	padding: 0 15px;
 }
 
 /* modal */
@@ -124,5 +124,11 @@ body {
 	}
 	.teachers .col-xs-12 {
 		margin-bottom: 20px;
+	}
+}
+
+@media (min-width: 768px) {
+	.apply {
+		width: 400px;
 	}
 }
