修改学员晋升规则

--- a/public/airclass/css/common.css
+++ b/public/airclass/css/common.css
@@ -322,30 +322,30 @@ a {
 
 
 /* modal */
-.modal-header {
-	border: none;
-}
+/*.modal-header {*/
+	/*border: none;*/
+/*}*/
 
-.modal-content {
-	position: relative;
-	/*border-radius: 0;*/
-}
-.modal-content .close {
-	position: absolute;
-	top: 3px;
-	right: 7px;
-}
-.modal-content .title {
-	margin-top: 22px;
-	font-size: 14px;
-	color: #333333;
-}
-.modal-dialog {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform:translateX(-53%) translateY(-50%) !important;
-}
+/*.modal-content {*/
+	/*position: relative;*/
+	/*!*border-radius: 0;*!*/
+/*}*/
+/*.modal-content .close {*/
+	/*position: absolute;*/
+	/*top: 3px;*/
+	/*right: 7px;*/
+/*}*/
+/*.modal-content .title {*/
+	/*margin-top: 22px;*/
+	/*font-size: 14px;*/
+	/*color: #333333;*/
+/*}*/
+/*.modal-dialog {*/
+    /*position: absolute;*/
+    /*left: 50%;*/
+    /*top: 50%;*/
+    /*transform:translateX(-53%) translateY(-50%) !important;*/
+/*}*/
 
 /* alert modal */
 .alert_modal {
